Fix css alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -923,6 +923,9 @@ video {
 			display: flex;
 			align-items: center;
 		}
+		.label {
+			margin-left: 5px;
+		}
 	}
 	.share-link-options {
 		display: flex;
